# mcp-server

./: .gitignore  CLAUDE.md  install.py  requirements.txt
database-mcp-server/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
database-mcp-server-http/: CLAUDE.md  docker-compose.yml  pyproject.toml  start.bat
database-mcp-server-http/docs/superpowers/specs/: 2026-03-21-mcp-db-server-expand-design.md
database-mcp-server-http/src/: config.py  server.py
database-mcp-server-http/src/tools/: __init__.py
database-mcp-server/docs/superpowers/plans/: 2026-03-21-mcp-db-server.md
database-mcp-server/docs/superpowers/specs/: 2026-04-10-mcp-db-cli-tool-design.md
database-mcp-server/src/: __init__.py  server.py
database-mcp-server/src/cli/: __init__.py  __main__.py  context.py  data.py  ddl.py  formatter.py  main.py  metadata.py  query.py  transaction.py
database-mcp-server/src/database/: base.py
database-mcp-server/src/tools/: ddl.py
mcp_python/: install.md  pyproject.toml
mcp_python/src/database/: __init__.py  starrocks.py
src/: server.py
swagger-mcp-server/: .gitignore  CLAUDE.md  README.md  exported_config.yaml  pyproject.toml  swagger-config.json  test_config.yaml
swagger-mcp-server/.claude/: settings.local.json
swagger-mcp-server/.worktrees-implement/src/: pyproject.toml
swagger-mcp-server/src/: __init__.py  config.py  server.py
swagger-mcp-server/src/backend/: __init__.py  manager.py
swagger-mcp-server/src/parser/: __init__.py  openapi.py
swagger-mcp-server/src/tools/: __init__.py  backend.py  config_file.py  explore.py  test.py
swagger-mcp-server/src/utils/: http.py
(+28 files in other folders)
