[project]
name = "mcp-db-server"
version = "1.0.0"
description = "MCP Server for MySQL, Oracle, StarRocks"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "oracledb>=2.0.0",
    "pyarrow>=14.0.0",
    "click>=8.1.0",
]

[project.scripts]
mcp-db = "src.cli:main"
mcp-db-server = "src.server:main"